codegen/generated/goud_engine.h


typedef enum GoudDebuggerStepKind {
    Frame = 0,
    Tick = 1,
} GoudDebuggerStepKind;
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
typedef struct FfiVec2 {
    float x;
    float y;
} FfiVec2;
typedef struct FpsStats {
    float current_fps;
    float min_fps;
    float max_fps;
    float avg_fps;
    float frame_time_ms;
} FpsStats;
typedef struct RenderMetrics {
    uint32_t draw_call_count;
    uint32_t sprites_submitted;
    uint32_t sprites_drawn;
    uint32_t sprites_culled;
    uint32_t batches_submitted;
    float avg_sprites_per_batch;
    float sprite_render_ms;
    float text_render_ms;
    float ui_render_ms;
    float total_render_ms;
    uint32_t text_draw_calls;
    uint32_t text_glyph_count;
    uint32_t ui_draw_calls;
} RenderMetrics;
typedef struct GoudMemoryCategoryStats {
    uint64_t current_bytes;
    uint64_t peak_bytes;
} GoudMemoryCategoryStats;
typedef struct GoudMemorySummary {
    struct GoudMemoryCategoryStats rendering;
    struct GoudMemoryCategoryStats assets;
    struct GoudMemoryCategoryStats ecs;
    struct GoudMemoryCategoryStats ui;
    struct GoudMemoryCategoryStats audio;
    struct GoudMemoryCategoryStats network;
    struct GoudMemoryCategoryStats debugger;
    struct GoudMemoryCategoryStats other;
    uint64_t total_current_bytes;
    uint64_t total_peak_bytes;
} GoudMemorySummary;
typedef uint64_t GoudAtlasHandle;
typedef uint64_t GoudTextureHandle;
typedef struct FfiAtlasEntry {
    float u_min;
    float v_min;
    float u_max;
    float v_max;
    uint32_t pixel_x;
    uint32_t pixel_y;
    uint32_t pixel_w;
    uint32_t pixel_h;
} FfiAtlasEntry;
typedef struct FfiAtlasStats {
    uint32_t texture_count;
    uint32_t width;
    uint32_t height;
    uint64_t used_pixels;
    uint64_t total_pixels;
    float efficiency;
    uint64_t wasted_pixels;
} FfiAtlasStats;
typedef struct FfiSpriteCmd {
    GoudTextureHandle texture;
    float x;
    float y;
    float width;
    float height;
    float rotation;
    float src_x;
    float src_y;
    float src_w;
    float src_h;
    float r;
    float g;
    float b;
    float a;
    int32_t z_layer;
    int32_t _padding;
} FfiSpriteCmd;
typedef struct GoudRenderStats {
    uint32_t draw_calls;
    uint32_t triangles;
    uint32_t texture_binds;
    uint32_t shader_binds;
} GoudRenderStats;
typedef struct FfiRenderMetrics {
    uint32_t draw_call_count;
    uint32_t sprites_submitted;
    uint32_t sprites_drawn;
    uint32_t sprites_culled;
    uint32_t batches_submitted;
    float avg_sprites_per_batch;
    float sprite_render_ms;
    float text_render_ms;
    float ui_render_ms;
    float total_render_ms;
    uint32_t text_draw_calls;
    uint32_t text_glyph_count;
    uint32_t ui_draw_calls;
} FfiRenderMetrics;
typedef uint64_t GoudFontHandle;
typedef struct FfiTextCmd {
    uint64_t font_handle;
    const char *text;
    float x;
    float y;
    float font_size;
    uint8_t alignment;
    uint8_t direction;
    uint16_t _pad0;
    float max_width;
    float line_spacing;
    float r;
    float g;
    float b;
    float a;
} FfiTextCmd;
GoudFontHandle goud_font_load(struct GoudContextId context_id, const char *path);
bool goud_font_destroy(struct GoudContextId context_id, GoudFontHandle font_handle);
GoudTextureHandle goud_texture_load(struct GoudContextId context_id, const char *path);
bool goud_texture_destroy(struct GoudContextId context_id, GoudTextureHandle texture);
uint32_t goud_renderer_draw_sprite_batch(struct GoudContextId context_id, const struct FfiSpriteCmd *cmds, uint32_t count);
bool goud_renderer_draw_sprite(struct GoudContextId context_id, GoudTextureHandle texture, float x, float y, float width, float height, float rotation, float r, float g, float b, float a);
bool goud_renderer_draw_sprite_rect(struct GoudContextId context_id, GoudTextureHandle texture, float x, float y, float width, float height, float rotation, float src_x, float src_y, float src_w, float src_h, uint32_t src_mode, float r, float g, float b, float a);
bool goud_renderer_draw_quad(struct GoudContextId context_id, float x, float y, float width, float height, float r, float g, float b, float a);
bool goud_renderer_get_stats(struct GoudContextId context_id, struct GoudRenderStats *out_stats);
bool goud_renderer_begin(struct GoudContextId context_id);
bool goud_renderer_end(struct GoudContextId context_id);
void goud_renderer_set_viewport(struct GoudContextId context_id, int32_t x, int32_t y, uint32_t width, uint32_t height);
void goud_renderer_enable_blending(struct GoudContextId context_id);
void goud_renderer_disable_blending(struct GoudContextId context_id);
void goud_renderer_enable_depth_test(struct GoudContextId context_id);
void goud_renderer_disable_depth_test(struct GoudContextId context_id);
void goud_renderer_clear_depth(struct GoudContextId context_id);
bool goud_renderer_set_coordinate_origin(struct GoudContextId context_id, uint32_t origin);
uint32_t goud_renderer_get_coordinate_origin(struct GoudContextId context_id);
bool goud_renderer_draw_text(struct GoudContextId context_id, GoudFontHandle font_handle, const char *text, float x, float y, float font_size, uint8_t alignment, float max_width, float line_spacing, uint8_t direction, float r, float g, float b, float a);
GOUD_DEPRECATED_MSG("Use goud_renderer_draw_text instead.") bool goud_draw_text(struct GoudContextId context_id, GoudFontHandle font_handle, const char *text, float x, float y, float font_size, uint8_t alignment, float max_width, float line_spacing, uint8_t direction, float r, float g, float b, float a);
uint32_t goud_renderer_draw_text_batch(struct GoudContextId context_id, const struct FfiTextCmd *cmds, uint32_t count);
typedef int32_t GoudKeyCode;
typedef int32_t GoudMouseButton;
int32_t goud_debugger_set_paused(struct GoudContextId context_id, bool paused);
int32_t goud_debugger_step(struct GoudContextId context_id, enum GoudDebuggerStepKind kind, uint32_t count);
int32_t goud_debugger_set_time_scale(struct GoudContextId context_id, float scale);
int32_t goud_debugger_set_debug_draw_enabled(struct GoudContextId context_id, bool enabled);
int32_t goud_debugger_inject_key_event(struct GoudContextId context_id, GoudKeyCode key, bool pressed);
int32_t goud_debugger_inject_mouse_button(struct GoudContextId context_id, GoudMouseButton button, bool pressed);
int32_t goud_debugger_inject_mouse_position(struct GoudContextId context_id, struct FfiVec2 position);
int32_t goud_debugger_inject_scroll(struct GoudContextId context_id, struct FfiVec2 delta);
int32_t goud_debugger_get_metrics_trace_json(struct GoudContextId context_id, uint8_t *buf, size_t buf_len);
int32_t goud_debugger_get_replay_status_json(struct GoudContextId context_id, uint8_t *buf, size_t buf_len);
int32_t goud_debugger_capture_frame_json(struct GoudContextId context_id, uint8_t *buf, size_t buf_len);
int32_t goud_debugger_start_recording(struct GoudContextId context_id);
int32_t goud_debugger_stop_recording_json(struct GoudContextId context_id, uint8_t *buf, size_t buf_len);
int32_t goud_debugger_start_replay(struct GoudContextId context_id, const uint8_t *data_ptr, size_t data_len);
int32_t goud_debugger_stop_replay(struct GoudContextId context_id);
int32_t goud_debugger_get_snapshot_json(struct GoudContextId context_id, uint8_t *buf, size_t buf_len);
int32_t goud_debugger_get_manifest_json(uint8_t *buf, size_t buf_len);
int32_t goud_debugger_set_profiling_enabled(struct GoudContextId context_id, bool enabled);
int32_t goud_debugger_set_selected_entity(struct GoudContextId context_id, uint64_t entity_id);
int32_t goud_debugger_clear_selected_entity(struct GoudContextId context_id);
int32_t goud_debugger_get_memory_summary(struct GoudContextId context_id, struct GoudMemorySummary *out_summary);
int32_t goud_debug_get_fps_stats(struct GoudContextId context_id, struct FpsStats *out_stats);
int32_t goud_render_get_metrics(struct GoudContextId context_id, struct RenderMetrics *out_metrics);
int32_t goud_debug_set_fps_overlay_enabled(struct GoudContextId context_id, bool enabled);
int32_t goud_debug_set_fps_update_interval(struct GoudContextId context_id, float interval);
int32_t goud_debug_set_fps_overlay_corner(struct GoudContextId context_id, int32_t corner);
GoudAtlasHandle goud_atlas_create(struct GoudContextId context_id, const char *category, uint32_t max_width, uint32_t max_height);
bool goud_atlas_add_from_file(struct GoudContextId context_id, GoudAtlasHandle atlas, const char *key, const char *path);
bool goud_atlas_add_texture(struct GoudContextId _context_id, GoudAtlasHandle _atlas, const char *_key, GoudTextureHandle _texture);
bool goud_atlas_add_pixels(struct GoudContextId context_id, GoudAtlasHandle atlas, const char *key, const uint8_t *pixels, uint32_t width, uint32_t height);
GoudTextureHandle goud_atlas_finalize(struct GoudContextId context_id, GoudAtlasHandle atlas);
bool goud_atlas_get_entry(struct GoudContextId context_id, GoudAtlasHandle atlas, const char *key, struct FfiAtlasEntry *out_entry);
bool goud_atlas_get_stats(struct GoudContextId context_id, GoudAtlasHandle atlas, struct FfiAtlasStats *out_stats);
GoudTextureHandle goud_atlas_get_texture(struct GoudContextId context_id, GoudAtlasHandle atlas);
bool goud_atlas_destroy(struct GoudContextId context_id, GoudAtlasHandle atlas);