sdks/python/goudengine/generated/_ffi.py


    # renderer
    _lib.goud_renderer_begin.argtypes = [GoudContextId]
    _lib.goud_renderer_begin.restype = ctypes.c_bool
    _lib.goud_renderer_end.argtypes = [GoudContextId]
    _lib.goud_renderer_end.restype = ctypes.c_bool
    _lib.goud_renderer_enable_blending.argtypes = [GoudContextId]
    _lib.goud_renderer_enable_blending.restype = None
    _lib.goud_renderer_set_coordinate_origin.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer_set_coordinate_origin.restype = ctypes.c_bool
    _lib.goud_renderer_get_coordinate_origin.argtypes = [GoudContextId]
    _lib.goud_renderer_get_coordinate_origin.restype = ctypes.c_uint32
    _lib.goud_renderer_draw_sprite.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer_draw_sprite.restype = ctypes.c_bool
    _lib.goud_renderer_draw_quad.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer_draw_quad.restype = ctypes.c_bool
    _lib.goud_texture_load.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_texture_load.restype = ctypes.c_uint64
    _lib.goud_texture_destroy.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_texture_destroy.restype = ctypes.c_bool
    _lib.goud_font_load.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_font_load.restype = ctypes.c_uint64
    _lib.goud_font_destroy.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_font_destroy.restype = ctypes.c_bool
    _lib.goud_renderer_draw_text.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_char_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_uint8, ctypes.c_float, ctypes.c_float, ctypes.c_uint8, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer_draw_text.restype = ctypes.c_bool
    _lib.goud_draw_text.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_char_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_uint8, ctypes.c_float, ctypes.c_float, ctypes.c_uint8, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_draw_text.restype = ctypes.c_bool
    _lib.goud_renderer_draw_sprite_rect.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer_draw_sprite_rect.restype = ctypes.c_bool
    _lib.goud_renderer_draw_sprite_batch.argtypes = [GoudContextId, ctypes.POINTER(FfiSpriteCmd), ctypes.c_uint32]
    _lib.goud_renderer_draw_sprite_batch.restype = ctypes.c_uint32
    _lib.goud_renderer_draw_text_batch.argtypes = [GoudContextId, ctypes.POINTER(FfiTextCmd), ctypes.c_uint32]
    _lib.goud_renderer_draw_text_batch.restype = ctypes.c_uint32
    _lib.goud_renderer_set_viewport.argtypes = [GoudContextId, ctypes.c_int32, ctypes.c_int32, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_renderer_set_viewport.restype = None
    _lib.goud_renderer_enable_depth_test.argtypes = [GoudContextId]
    _lib.goud_renderer_enable_depth_test.restype = None
    _lib.goud_renderer_disable_depth_test.argtypes = [GoudContextId]
    _lib.goud_renderer_disable_depth_test.restype = None
    _lib.goud_renderer_clear_depth.argtypes = [GoudContextId]
    _lib.goud_renderer_clear_depth.restype = None
    _lib.goud_renderer_disable_blending.argtypes = [GoudContextId]
    _lib.goud_renderer_disable_blending.restype = None
    _lib.goud_renderer_get_stats.argtypes = [GoudContextId, ctypes.POINTER(GoudRenderStats)]
    _lib.goud_renderer_get_stats.restype = ctypes.c_bool
    _lib.goud_atlas_create.argtypes = [GoudContextId, ctypes.c_char_p, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_atlas_create.restype = ctypes.c_uint64
    _lib.goud_atlas_add_from_file.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_char_p, ctypes.c_char_p]
    _lib.goud_atlas_add_from_file.restype = ctypes.c_bool
    _lib.goud_atlas_add_texture.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_char_p, ctypes.c_uint64]
    _lib.goud_atlas_add_texture.restype = ctypes.c_bool
    _lib.goud_atlas_add_pixels.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_char_p, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_atlas_add_pixels.restype = ctypes.c_bool
    _lib.goud_atlas_finalize.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_atlas_finalize.restype = ctypes.c_uint64
    _lib.goud_atlas_get_entry.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_char_p, ctypes.POINTER(FfiAtlasEntry)]
    _lib.goud_atlas_get_entry.restype = ctypes.c_bool
    _lib.goud_atlas_get_stats.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(FfiAtlasStats)]
    _lib.goud_atlas_get_stats.restype = ctypes.c_bool
    _lib.goud_atlas_get_texture.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_atlas_get_texture.restype = ctypes.c_uint64
    _lib.goud_atlas_destroy.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_atlas_destroy.restype = ctypes.c_bool

    # debug
    _lib.goud_debug_get_fps_stats.argtypes = [GoudContextId, ctypes.POINTER(FpsStats)]
    _lib.goud_debug_get_fps_stats.restype = ctypes.c_int32
    _lib.goud_render_get_metrics.argtypes = [GoudContextId, ctypes.POINTER(FfiRenderMetrics)]
    _lib.goud_render_get_metrics.restype = ctypes.c_int32
    _lib.goud_debug_set_fps_overlay_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_debug_set_fps_overlay_enabled.restype = ctypes.c_int32
    _lib.goud_debug_set_fps_update_interval.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_debug_set_fps_update_interval.restype = ctypes.c_int32
    _lib.goud_debug_set_fps_overlay_corner.argtypes = [GoudContextId, ctypes.c_int32]
    _lib.goud_debug_set_fps_overlay_corner.restype = ctypes.c_int32
    _lib.goud_debugger_capture_frame_json.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_debugger_capture_frame_json.restype = ctypes.c_int32
    _lib.goud_debugger_get_snapshot_json.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_debugger_get_snapshot_json.restype = ctypes.c_int32
    _lib.goud_debugger_get_manifest_json.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_debugger_get_manifest_json.restype = ctypes.c_int32
    _lib.goud_debugger_get_metrics_trace_json.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_debugger_get_metrics_trace_json.restype = ctypes.c_int32
    _lib.goud_debugger_get_replay_status_json.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_debugger_get_replay_status_json.restype = ctypes.c_int32
    _lib.goud_debugger_inject_key_event.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_bool]
    _lib.goud_debugger_inject_key_event.restype = ctypes.c_int32
    _lib.goud_debugger_inject_mouse_button.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_bool]
    _lib.goud_debugger_inject_mouse_button.restype = ctypes.c_int32
    _lib.goud_debugger_inject_mouse_position.argtypes = [GoudContextId, FfiVec2]
    _lib.goud_debugger_inject_mouse_position.restype = ctypes.c_int32
    _lib.goud_debugger_inject_scroll.argtypes = [GoudContextId, FfiVec2]
    _lib.goud_debugger_inject_scroll.restype = ctypes.c_int32
    _lib.goud_debugger_set_paused.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_debugger_set_paused.restype = ctypes.c_int32
    _lib.goud_debugger_step.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint32]
    _lib.goud_debugger_step.restype = ctypes.c_int32
    _lib.goud_debugger_set_time_scale.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_debugger_set_time_scale.restype = ctypes.c_int32
    _lib.goud_debugger_set_debug_draw_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_debugger_set_debug_draw_enabled.restype = ctypes.c_int32
    _lib.goud_debugger_set_profiling_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_debugger_set_profiling_enabled.restype = ctypes.c_int32
    _lib.goud_debugger_set_selected_entity.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_debugger_set_selected_entity.restype = ctypes.c_int32
    _lib.goud_debugger_clear_selected_entity.argtypes = [GoudContextId]
    _lib.goud_debugger_clear_selected_entity.restype = ctypes.c_int32
    _lib.goud_debugger_get_memory_summary.argtypes = [GoudContextId, ctypes.POINTER(GoudMemorySummary)]
    _lib.goud_debugger_get_memory_summary.restype = ctypes.c_int32
    _lib.goud_debugger_start_recording.argtypes = [GoudContextId]
    _lib.goud_debugger_start_recording.restype = ctypes.c_int32
    _lib.goud_debugger_stop_recording_json.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_debugger_stop_recording_json.restype = ctypes.c_int32
    _lib.goud_debugger_start_replay.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_debugger_start_replay.restype = ctypes.c_int32
    _lib.goud_debugger_stop_replay.argtypes = [GoudContextId]
    _lib.goud_debugger_stop_replay.restype = ctypes.c_int32
